@@ -8,6 +8,7 @@ in the sources of this package and additionally can be obtained from Internet
 <https://www.gnu.org/licenses>.
 
 * [2018-] added data structure TMCG_Bigint
+* [2018-11-12] changed formula for TMCG_MAX_KEYBITS (increased by factor 2)
 * [2018-11-11] release 1.3.15 of LibTMCG
 * [2018-11-10] RFC4880: size changed for revocationkey_fingerprint [RFC 4880bis]
 * [2018-11-10] RFC4880: fixes accumulation of key flags and features
